--- a/app/views/coupons/index.html.erb
+++ b/app/views/coupons/index.html.erb
@@ -1,4 +1,4 @@
 <%@coupons.each do |coupon|%>
- <div><%= link_to coupon, coupon_path(coupon) %></div>
+ <div><%= link_to coupon.coupon_code, coupon_path(coupon) %></div>
   <% end %>
 </div>
