--- a/app/views/coupons/new.html.erb
+++ b/app/views/coupons/new.html.erb
@@ -1,5 +1,5 @@
 <h1>Coupon Form</h1>
-<%= form_tag students_path do %>
+<%= form_tag coupons_path do %>
 <%= text_field_tag :first_name %>
 <%= text_field_tag :last_name %>
 <%= submit_tag "Submit Student" %>
