--- a/app/views/coupons/new.html.erb
+++ b/app/views/coupons/new.html.erb
@@ -1,6 +1,6 @@
 <h1>Coupon Form</h1>
 <%= form_tag coupons_path do %>
-<%= text_field_tag :first_name %>
-<%= text_field_tag :last_name %>
+<%= text_field_tag :"coupon[coupon_code]" %>
+<%= text_field_tag :"coupon[store]" %>
 <%= submit_tag "Submit Student" %>
 <%end%>
