--- a/app/views/coupons/new.html.erb
+++ b/app/views/coupons/new.html.erb
@@ -2,5 +2,5 @@
 <%= form_tag coupons_path do %>
 <%= text_field_tag :"coupon[coupon_code]" %>
 <%= text_field_tag :"coupon[store]" %>
-<%= submit_tag "Submit Student" %>
+<%= submit_tag "Submit Coupon" %>
 <%end%>
